test/sematest/valid/identifier_system_in_scope3.java
class A {
  public static void main(String[] System) {

  }
}