test/sematest/invalid/more_than_one_main.java
class A {
  public static void main(String[] a){

  }
}

class B {
  public static void main(String[] hi){

  }
}